tests/parser/fail/unterminated-comment.som
"test:
fail-message:
  regex: comment .+ not terminated
"

UnterminatedComment = (
  test = ()
)

"hello world...
